--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@i/eslint-config",
-  "version": "0.0.15",
+  "version": "0.0.16",
   "description": "ESLint configuration for the Intouch Design System",
   "main": "index.js",
   "repository": "https://intazdoweb.intouchsol.com/IntouchDesignSystem/IntouchDesignSystem/_git/eslint-config",
@@ -9,12 +9,24 @@
   "dependencies": {},
   "devDependencies": {},
   "peerDependencies": {
-    "@typescript-eslint/eslint-plugin": "4.13.0",
-    "@typescript-eslint/parser": "4.13.0",
-    "babel-eslint": "10.1.0",
-    "eslint": "7.18.0",
+    "@babel/eslint-parser": "7.12.1",
+    "@babel/eslint-plugin": "7.11.5",
+    "@typescript-eslint/eslint-plugin": "4.14.2",
+    "@typescript-eslint/parser": "4.14.2",
+    "eslint": "7.19.0",
     "eslint-plugin-react": "7.22.0",
     "eslint-plugin-react-hooks": "4.2.0",
     "typescript": ">=4.0.3"
+  },
+  "peerDependenciesMeta": {
+    "@typescript-eslint/eslint-plugin": {
+      "optional": true
+    },
+    "@typescript-eslint/parser": {
+      "optional": true
+    },
+    "typescript": {
+      "optional": true
+    }
   }
 }
