--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@i/eslint-config",
-  "version": "0.0.20",
+  "version": "0.1.0",
   "description": "ESLint configuration for the Intouch Design System",
   "main": "index.js",
   "repository": "https://intazdoweb.intouchsol.com/IntouchDesignSystem/IntouchDesignSystem/_git/eslint-config",
@@ -9,14 +9,15 @@
   "dependencies": {},
   "devDependencies": {},
   "peerDependencies": {
-    "@babel/eslint-parser": "7.14.4",
-    "@babel/eslint-plugin": "7.13.16",
-    "@typescript-eslint/eslint-plugin": "4.25.0",
-    "@typescript-eslint/parser": "4.25.0",
-    "eslint": "7.27.0",
-    "eslint-plugin-react": "7.23.2",
+    "@babel/eslint-parser": "7.14.7",
+    "@babel/eslint-plugin": "7.14.5",
+    "@typescript-eslint/eslint-plugin": "4.28.3",
+    "@typescript-eslint/parser": "4.28.3",
+    "eslint": "7.30.0",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-react": "7.24.0",
     "eslint-plugin-react-hooks": "4.2.0",
-    "typescript": ">=4.3.2"
+    "typescript": ">=4.3.5"
   },
   "peerDependenciesMeta": {
     "@typescript-eslint/eslint-plugin": {
