--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@i/eslint-config",
-  "version": "0.2.5",
+  "name": "@intouchg/eslint-config",
+  "version": "0.3.0",
   "description": "ESLint configuration for the Intouch Design System",
   "main": "index.js",
   "repository": "https://intazdoweb.intouchsol.com/IntouchDesignSystem/IntouchDesignSystem/_git/eslint-config",
