--- a/package.json
+++ b/package.json
@@ -1,33 +1,22 @@
 {
   "name": "@intouchg/eslint-config",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "description": "ESLint configuration for the Intouch Design System",
   "main": "index.js",
-  "repository": "https://intazdoweb.intouchsol.com/IntouchDesignSystem/IntouchDesignSystem/_git/eslint-config",
+  "repository": "https://github.com/intouchg/eslint-config",
   "author": "Intouch Group",
   "license": "MIT",
   "dependencies": {},
   "devDependencies": {},
   "peerDependencies": {
-    "@babel/eslint-parser": "7.16.3",
-    "@babel/eslint-plugin": "7.14.5",
-    "@typescript-eslint/eslint-plugin": "5.6.0",
-    "@typescript-eslint/parser": "5.6.0",
-    "eslint": "8.4.1",
+    "@babel/eslint-parser": "7.16.5",
+    "@babel/eslint-plugin": "7.16.5",
+    "@typescript-eslint/eslint-plugin": "5.8.0",
+    "@typescript-eslint/parser": "5.8.0",
+    "eslint": "8.5.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-react": "7.27.1",
     "eslint-plugin-react-hooks": "4.3.0",
-    "typescript": ">=4.5.2"
-  },
-  "peerDependenciesMeta": {
-    "@typescript-eslint/eslint-plugin": {
-      "optional": true
-    },
-    "@typescript-eslint/parser": {
-      "optional": true
-    },
-    "typescript": {
-      "optional": true
-    }
+    "typescript": ">=4.5.4"
   }
 }
