--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@intouchg/eslint-config",
-  "version": "0.5.1",
+  "version": "0.6.0",
   "description": "ESLint configuration for the Intouch Design System",
   "main": "index.js",
   "repository": "https://github.com/intouchg/eslint-config",
@@ -9,14 +9,14 @@
   "dependencies": {},
   "devDependencies": {},
   "peerDependencies": {
-    "@babel/eslint-parser": "7.16.5",
-    "@babel/eslint-plugin": "7.16.5",
-    "@typescript-eslint/eslint-plugin": "5.8.0",
-    "@typescript-eslint/parser": "5.8.0",
-    "eslint": "8.5.0",
-    "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-react": "7.27.1",
-    "eslint-plugin-react-hooks": "4.3.0",
+    "@babel/eslint-parser": "^7.16.5",
+    "@babel/eslint-plugin": "^7.16.5",
+    "@typescript-eslint/eslint-plugin": "^5.8.0",
+    "@typescript-eslint/parser": "^5.8.0",
+    "eslint": "^8.5.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-react": "^7.27.1",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "typescript": ">=4.5.4"
   }
 }
